# AMICI

.github/workflows/: deploy_protected.yml
documentation/: conf.py
include/amici/: symbolic_functions.h
python/amici/: ode_export.py  petab_import.py  sbml_import.py  setup.template.py  setuptools.py  smooth_transitions.py
python/sdist/amici/: smooth_transitions.py
scripts/: buildSuperLUMT.sh
src/: amici.cpp  model.cpp  symbolic_functions.cpp
tests/cpputest/unittests/: CMakeLists.txt
